# opencl-graphics

./: Cargo.toml  flake.nix
assets/: jacobi.cl  line_material.wgsl
src/: curve.rs  jacobi.cl  jacobi.rs  main.rs  ocl_executor.rs  ocl_runtime.rs  opencl.rs
