[package]
name = "opencl-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
opencl3 = { version = "0.9.4", features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"] }
